--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^14.1.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^3.1.2",
     "rxjs": "~7.8.0",
